fixed body overflow in global layout / fixed categories overflow in blog page/ fixed related post links / maded mobile navbar in header expanded on default and scrollable

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -5,6 +5,10 @@
 @tailwind utilities;
 
 
+html, body {
+  overflow-x: hidden;
+ /* width: 100vw; */
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
